Fixing the gap seen in Safari on the collection dropdown.

--- a/less/primo-search.less
+++ b/less/primo-search.less
@@ -77,7 +77,7 @@
 
 .EXLSearchFieldRibbonFormSelectedCollection{
   height: auto;
-  width: 40%;
+  width: 40.1%;
   border-left: none;
   @media(max-width: 756px){
     width: 50%;
